--- a/index.html
+++ b/index.html
@@ -14,8 +14,38 @@
     <title>Weather App 🇺🇦</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <a href="" class="btn btn-primary">click me</a>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Kyiv</h1>
+        <ul>
+          <li>Thursday 15:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Clear"
+            />
+            12℃ | ℉
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small
+        ><a
+          href="https://github.com/Olga-Ukraine2022/vanilla-weather-app.git"
+          target="_blank"
+          >Open-source code</a
+        >, by Olga Nikolenko</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
