--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
       <div class="weather-app">
         <h1>Kyiv</h1>
+
         <ul>
           <li>Thursday 15:00</li>
           <li>Clear</li>
@@ -29,6 +30,7 @@
             />
             12℃ | ℉
           </div>
+          <img src="ukraine.png" alt="stand with ukraine" class="ukraine" />
           <div class="col-6">
             <ul>
               <li>Precipitation: 0%</li>
@@ -37,14 +39,16 @@
             </ul>
           </div>
         </div>
+
+        <small
+          ><a
+            href="https://github.com/Olga-Ukraine2022/vanilla-weather-app.git"
+            target="_blank"
+            class="source"
+            >Open-source code</a
+          >, by Olga Nikolenko</small
+        >
       </div>
-      <small
-        ><a
-          href="https://github.com/Olga-Ukraine2022/vanilla-weather-app.git"
-          target="_blank"
-          >Open-source code</a
-        >, by Olga Nikolenko</small
-      >
     </div>
     <script src="src/app.js"></script>
   </body>
