--- a/index.html
+++ b/index.html
@@ -15,33 +15,42 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Kyiv</h1>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Kyiv</h1>
 
-        <ul>
-          <li>Thursday 15:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="Clear"
-            />
-            12℃ | ℉
-          </div>
-          <img src="ukraine.png" alt="stand with ukraine" class="ukraine" />
-          <div class="col-6">
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 2 km/h</li>
+              <li>Thursday 15:00</li>
+              <li>Clear</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Clear"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">℃ | <a href="#">℉ </a></span>
+                </div>
+              </div>
+            </div>
+            <img src="ukraine.png" alt="stand with ukraine" class="ukraine" />
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
-
-        <small
-          ><a
+        <small>
+          <a
             href="https://github.com/Olga-Ukraine2022/vanilla-weather-app.git"
             target="_blank"
             class="source"
